--- a/docs/csharp/quick-starts/hello-world.yml
+++ b/docs/csharp/quick-starts/hello-world.yml
@@ -11,11 +11,12 @@ metadata:
   displayType: two-column
   interactive: csharp
   ms.custom: mvc
-  ms.openlocfilehash: e1fb89d06896a61560a8638415b992236a5461e6
-  ms.sourcegitcommit: 15109844229ade1c6449f48f3834db1b26907824
+  ms.openlocfilehash: 395ed81b5845047063d84469d91e3d03f17f12ae
+  ms.sourcegitcommit: 54231aa56fca059e9297888a96fbca1d4cf3746c
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 05/07/2018
+  ms.lasthandoff: 05/25/2018
+  ms.locfileid: "34549673"
 items:
 - durationInMinutes: 1
   content: >
@@ -97,4 +98,4 @@ items:
     > [!NOTE]
 
     > このオンライン コーディング体験はプレビュー モードです。 問題が生じた場合は、[dotnet/try リポジトリ](https://github.com/dotnet/try/issues)でその問題をお知らせください。
-- content: "\"Hello C#\" クイックスタートはこれで終了です。\n\n`string` 型の機能の詳細については、「[C# プログラミング ガイド](../programming-guide/index.md)」の[文字列](../programming-guide/strings/index.md)に関するトピックで学習できます。\n[文字列のヒント](../how-to/index.md#strings)に関するページを参照してください。"
+- content: "\"Hello C#\" クイックスタートはこれで終了です。\n\n`string` 型の機能の詳細については、「[C# プログラミング ガイド](../programming-guide/index.md)」の[文字列](../programming-guide/strings/index.md)に関するトピックで学習できます。\n[文字列の処理に関するヒント](../how-to/index.md#working-with-strings)もご覧ください。"
